[gd_scene load_steps=9 format=2]

[ext_resource path="res://Spells/Spell-5-3.gd" type="Script" id=1]
[ext_resource path="res://Textures/Rune/sword-removebg-preview.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.5, 16 )

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackBox/CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 2 ) ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "Stab"
length = 0.7
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.32, 0.7 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -67, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.32, 0.7 )
}

[sub_resource type="Animation" id=4]
resource_name = "Swing"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.35, 0.4, 0.45, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 22, -6 ), Vector2( 17, -17 ), Vector2( -1.49012e-08, -16 ), Vector2( -8, -12 ), Vector2( -16, -8 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.35, 0.4, 0.45, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 58.2, 29.1, 0.8, -42.8, -71.9, 0.0 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 150.38

[node name="Spell-5-3" type="Node2D"]
position = Vector2( 0, -2 )
script = ExtResource( 1 )

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2( 0, -43 )

[node name="Node2D" type="Node2D" parent="Node2D2"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D2/Node2D"]
position = Vector2( -1, -17 )
scale = Vector2( 0.0876003, 0.101985 )
frames = SubResource( 1 )

[node name="AttackBox" type="Area2D" parent="Node2D2/Node2D"]
position = Vector2( -1, -4 )
scale = Vector2( 1.68767, 1.13101 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D2/Node2D/AttackBox"]
modulate = Color( 0, 0, 1, 1 )
self_modulate = Color( 1, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 0.592533, -17.6833 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D2/Node2D"]
autoplay = "Stab"
anims/RESET = SubResource( 3 )
anims/Stab = SubResource( 5 )
anims/Swing = SubResource( 4 )

[node name="Range" type="Area2D" parent="Node2D2/Node2D"]
position = Vector2( -1, 9 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Node2D2/Node2D/Range"]
position = Vector2( 0, -6 )
shape = SubResource( 6 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
scale = Vector2( 1, 1.36923 )
polygon = PoolVector2Array( -2, -117, -2, 0, 2, 0, 1, -117, 8, -112, 0, -130, -11, -115 )

[connection signal="area_entered" from="Node2D2/Node2D/AttackBox" to="." method="_on_AttackBox_area_entered"]
[connection signal="animation_finished" from="Node2D2/Node2D/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Node2D2/Node2D/Range" to="." method="_on_Range_area_entered"]
[connection signal="area_exited" from="Node2D2/Node2D/Range" to="." method="_on_Range_area_exited"]
